feat(Portfolio): update docker container to v1.10.0

--- a/charts/portfolio/templates/deployment.yaml
+++ b/charts/portfolio/templates/deployment.yaml
@@ -116,6 +116,11 @@ spec:
                 secretKeyRef:
                   key: GITHUB_TOKEN
                   name: {{ include "portfolio.secretName" . }}
+            {{- with .Values.application.cloudflareWebAnalyticsToken }}
+            - name: NEXT_PUBLIC_CLOUDFLARE_WEB_ANALYTICS_TOKEN
+              value: {{ . }}
+            {{- end }}
+
           volumeMounts:
             - name: tmp
               mountPath: /tmp
