--- a/charts/portfolio/values.yaml
+++ b/charts/portfolio/values.yaml
@@ -16,7 +16,7 @@ image:
   # type: string
   # @schema
   # -- Container image tag to deploy.
-  tag: v1.9.1@sha256:9ecc2c20dad7e8d5c38af84fc0246887219bc7d321dff0441eec5a27ad5224c2
+  tag: v1.10.0@sha256:6e643a3fda9c02df6c46f4cfebcf668d10e27026b49ed351b3ecf3a55cb99113
 
   # @schema
   # enum: [Always, IfNotPresent, Never]
@@ -63,6 +63,13 @@ application:
     # Only used if secretName is not provided.
     # This will create a Kubernetes Secret automatically.
     # token: ""
+
+  # @schema
+  # type: string
+  # @schema
+  # -- Cloudflare Web Analytics token for tracking website traffic.
+  # If provided, the application will send analytics data to Cloudflare.
+  cloudflareWebAnalyticsToken: ""
 
   # @schema
   # additionalProperties: true
