chore: fix checkout

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           token: ${{ steps.generate_token.outputs.token }}
-          persist-credentials: false
+          persist-credentials: true
 
       - name: Setup Helm Environment
         uses: ./.github/actions/setup-helm
