--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   docs:
+    name: Documentation
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -81,6 +82,7 @@ jobs:
             })
 
   unit-test:
+    name: Unit Tests
     needs: docs
     if: needs.docs.outputs.changes_detected != 'true'
     runs-on: ubuntu-latest
@@ -113,6 +115,7 @@ jobs:
           done
 
   lint:
+    name: Lint Charts
     needs: docs
     if: needs.docs.outputs.changes_detected != 'true'
     runs-on: ubuntu-latest
@@ -151,6 +154,7 @@ jobs:
         run: ct lint --debug --config ./.github/configs/ct-lint.yaml --lint-conf ./.github/configs/lintconf.yaml
 
   install:
+    name: Install & Verify
     needs: [docs, lint]
     if: needs.docs.outputs.changes_detected != 'true'
     runs-on: ubuntu-latest
@@ -194,6 +198,7 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
         run: ct install --config ./.github/configs/ct-lint.yaml
   renovate-validate:
+    name: Validate Renovate Config
     runs-on: ubuntu-latest
     steps:
       - name: Harden Runner
