build: enhance actions security (#93)
Co-authored-by: actions-maintenance-bot[bot] <253958393+actions-maintenance-bot[bot]@users.noreply.github.com>

--- a/.github/actions/setup-helm/action.yaml
+++ b/.github/actions/setup-helm/action.yaml
@@ -21,4 +21,4 @@ runs:
     - name: Install helm-schema
       shell: bash
       run: |
-        helm plugin install https://github.com/dadav/helm-schema --verify=false
+        helm plugin install https://github.com/dadav/helm-schema --version 0.18.1 --verify=false
