build: improve renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,9 @@
   "extends": [
     "config:best-practices",
     "helpers:pinGitHubActionDigests",
-    "workarounds:all"
+    "workarounds:all",
+    "github>TimSchoenle/actions//configs/renovate/base",
+    "github>TimSchoenle/actions//configs/renovate/ci-automerge"
   ],
   "dependencyDashboard": true,
   "semanticCommits": "enabled",
@@ -19,29 +21,10 @@
   "packageRules": [
     {
       "matchManagers": [
-        "github-actions"
-      ],
-      "groupName": "all non-major actions",
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ],
-      "automerge": true
-    },
-    {
-      "matchManagers": [
         "helmv3",
         "helm-values"
       ],
-      "groupName": "all non-major charts",
-      "matchUpdateTypes": [
-        "minor",
-        "patch",
-        "pin",
-        "digest"
-      ]
+      "enabled": false
     }
   ]
 }
