build: use centralized renovate default config

--- a/renovate.json
+++ b/renovate.json
@@ -1,23 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:best-practices",
-    "helpers:pinGitHubActionDigests",
-    "workarounds:all",
-    "github>TimSchoenle/actions//configs/renovate/base",
-    "github>TimSchoenle/actions//configs/renovate/ci-automerge"
-  ],
-  "dependencyDashboard": true,
-  "semanticCommits": "enabled",
-  "labels": [
-    "dependencies"
-  ],
-  "rebaseWhen": "auto",
-  "timezone": "Europe/Berlin",
-  "minimumReleaseAge": null,
-  "prHourlyLimit": 0,
-  "prConcurrentLimit": 0,
-  "branchConcurrentLimit": 0,
+  "extends": ["github>TimSchoenle/actions//configs/renovate/default"],
   "packageRules": [
     {
       "matchManagers": [
