--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Setup Helm Environment
         uses: ./.github/actions/setup-helm
 
+      - name: Build Helm dependencies
+        uses: ./.github/actions/build-deps
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@cae68fefc6b5f367a0275617c9f83181ba54714f # v1.7.0
         with:
