--- a/charts/cloudflare-access-webhook-redirect/values.yaml
+++ b/charts/cloudflare-access-webhook-redirect/values.yaml
@@ -732,11 +732,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPort"
+    #         $ref: "definitions/networkPolicy.json#/definitions/networkPolicyPort"
     #     to:
     #       type: array
     #       items:
-    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPeer"
+    #         $ref: "definitions/networkPolicy.json#/definitions/networkPolicyPeer"
     # @schema
     # Example: Allow access to a generic app
     # - ports:
