--- a/charts/portfolio/values.yaml
+++ b/charts/portfolio/values.yaml
@@ -578,11 +578,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/definitions/networkPolicyPort"
+    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPort"
     #     to:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/definitions/networkPolicyPeer"
+    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPeer"
     # @schema
     # -- Custom egress rules
     customRules: []
