chore: maybe this will improve

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
         uses: ./.github/actions/build-deps
 
       - name: Generate schemas
-        run: helm schema
+        run: helm schema --add-schema-reference
 
       - name: Run helm-docs
         uses: losisin/helm-docs-github-action@6f957579ac122ecc167bf515fe84e828686c9a15 # v1.7.1
