--- a/charts/s3-bucket-perma-link/values.yaml
+++ b/charts/s3-bucket-perma-link/values.yaml
@@ -488,11 +488,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPort"
+    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPort"
     #     from:
     #       type: array
     #       items:
-    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPeer"
+    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPeer"
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -560,11 +560,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPort"
+    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPort"
     #     to:
     #       type: array
     #       items:
-    #         $ref: "../../definitions/networkPolicy.json#/definitions/networkPolicyPeer"
+    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPeer"
     # @schema
     # Example: Allow access to internal S3
     # - ports:
