chore: maybe this will improve

--- a/charts/portfolio/values.yaml
+++ b/charts/portfolio/values.yaml
@@ -506,11 +506,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPort"
+    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPort"
     #     from:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPeer"
+    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPeer"
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -578,11 +578,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPort"
+    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPort"
     #     to:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/definitions/networkPolicyPeer"
+    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPeer"
     # @schema
     # -- Custom egress rules
     customRules: []
