--- a/charts/netcup-offer-bot/values.yaml
+++ b/charts/netcup-offer-bot/values.yaml
@@ -305,11 +305,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPort"
+    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPort"
     #     from:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPeer"
+    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPeer"
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -377,11 +377,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPort"
+    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPort"
     #     to:
     #       type: array
     #       items:
-    #         $ref: "#/definitions/networkPolicy.json#/networkPolicyPeer"
+    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPeer"
     # @schema
     # -- Custom egress rules
     customRules: []
