--- a/charts/cloudflare-access-webhook-redirect/values.yaml
+++ b/charts/cloudflare-access-webhook-redirect/values.yaml
@@ -660,11 +660,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPort"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
     #     from:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPeer"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -732,11 +732,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPort"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
     #     to:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPeer"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
     # @schema
     # Example: Allow access to a generic app
     # - ports:
