--- a/charts/netcup-offer-bot/values.yaml
+++ b/charts/netcup-offer-bot/values.yaml
@@ -305,11 +305,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPort"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
     #     from:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPeer"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
     # @schema
     # -- Custom ingress rules
     customRules: []
@@ -377,11 +377,11 @@ networkPolicy:
     #     ports:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPort"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPort"
     #     to:
     #       type: array
     #       items:
-    #         $ref: "./definitions/networkPolicy.json#/networkPolicyPeer"
+    #         $ref: "https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.35.0/_definitions.json#/definitions/io.k8s.api.networking.v1.NetworkPolicyPeer"
     # @schema
     # -- Custom egress rules
     customRules: []
